.opsera-fbb3/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-fbb3-dev
  labels:
    tenant: opsera
    app: fbb3
    environment: dev
    managed-by: opsera-c2c
