.opsera-fbb3/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fbb3
  namespace: opsera-fbb3-dev
  labels:
    app: fbb3
    tenant: opsera
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: fbb3-dev.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fbb3
                port:
                  number: 80
  tls:
    - hosts:
        - fbb3-dev.agent.opsera.dev
      secretName: fbb3-tls
